...
    <string name="q18_how_often_do_you_recycle">Q18: How often do you recycle?</string>
    <string name="always">Always</string>
    <string name="submit">SUBMIT</string>
    <string name="eco_agent_icon">Eco Agent Icon</string>
    <string name="solar">Solar</string>
    <string name="app_name">PlanetZe</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="redo_survey">Re-Do Survey</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="total_emission">Total C02 Emissions</string>
    <string name="slogan">Track your footprint, change the world</string>
    <string name="create_account">Create\nAccount</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="my_account">My Account</string>
    <string name="conditions">By signing up, you agree to our\nPrivacy Policy and Terms of Service.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="OR">----------------- OR -----------------</string>
    <string name="learn_more">Learn More</string>
    <string name="eco_hub">Eco Hub</string>
    <string name="about_eco_hub">Feel empowered with knowledge, trends, and tools for sustainable living!</string>
    <string name="books">Books</string>
    <string name="articles">Articles</string>
...
